--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
             {% endif %}
 
             {% if site.author.facebook_username %}
-              <!-- Twitter -->
+              <!-- Facebook -->
               <li class="navigation__item">
                 <a href="http://fb.me/{{ site.author.facebook_username }}" title="{{ site.author.facebook_username }} on Facebook" target="_blank">
                   <i class="icon icon-social-facebook"></i>
