--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,7 +3,7 @@
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
         var disqus_config = function () {
-          this.page.url = 'http://www.sbisinger.net{{ page.url }}';
+          this.page.url = '{{ site.url }}{{ page.url }}';
           this.page.identifier = '{{ page.id }}';
           this.page.title = '{{ page.title }}';
         };
